# HITL-Dynamics

./: 1DoFrocket.cpp  CMakeLists.txt  CODEOWNERS  README.md  Rocket.cpp  Rocket.hpp  main.cpp
include/: Aerodynamics.hpp  DragFromFile.hpp  EulerSolver.hpp  IAerodynamics.hpp  IEnvironment.hpp  IRocket.hpp  ISolver.hpp  IsaEnvironment.hpp  IsaWrapper.hpp  RK4Solver.hpp  RocketModel.hpp  State.hpp
rocketfoldre/: Rocket.cpp
src/aerodynamics/: DragFromFile.cpp
src/environment/: ISA.hpp  IsaEnvironment.cpp  IsaWrapper.cpp
src/solvers/: EulerSolver.cpp  RK4Solver.cpp
